// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marquee renders 0 1`] = `
Array [
  .c0 {
  marquee: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders function 1`] = `
Array [
  .c0 {
  marquee: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: has;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders invalid theme path 1`] = `
Array [
  .c0 {
  marquee: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders negative number 1`] = `
Array [
  .c0 {
  marquee: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  marquee: July;
}

@media screen and (min-width:November) {
  .c0 {
    marquee: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  marquee: July;
}

@media screen and (min-width:November) {
  .c0 {
    marquee: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  marquee: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  marquee: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marquee: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marquee: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  marquee: July;
}

@media May {
  .c0 {
    marquee: August;
  }
}

@media April {
  .c0 {
    marquee: September;
  }
}

@media January {
  .c0 {
    marquee: November;
  }
}

@media April {
  .c0 {
    marquee: August;
  }
}

@media June {
  .c0 {
    marquee: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  marquee: July;
}

@media May {
  .c0 {
    marquee: August;
  }
}

@media April {
  .c0 {
    marquee: September;
  }
}

@media January {
  .c0 {
    marquee: November;
  }
}

@media April {
  .c0 {
    marquee: August;
  }
}

@media June {
  .c0 {
    marquee: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  marquee: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee: November;
  }
}

@media April {
  .c0 {
    marquee: January;
  }
}

@media January {
  .c0 {
    marquee: December;
  }
}

@media April {
  .c0 {
    marquee: April;
  }
}

@media June {
  .c0 {
    marquee: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  marquee: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee: November;
  }
}

@media April {
  .c0 {
    marquee: January;
  }
}

@media January {
  .c0 {
    marquee: December;
  }
}

@media April {
  .c0 {
    marquee: April;
  }
}

@media June {
  .c0 {
    marquee: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    marquee: July;
  }
}

@media April {
  .c0 {
    marquee: August;
  }
}

@media January {
  .c0 {
    marquee: September;
  }
}

@media April {
  .c0 {
    marquee: November;
  }
}

@media June {
  .c0 {
    marquee: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marquee: July;
  }
}

@media April {
  .c0 {
    marquee: August;
  }
}

@media January {
  .c0 {
    marquee: September;
  }
}

@media April {
  .c0 {
    marquee: November;
  }
}

@media June {
  .c0 {
    marquee: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee: January;
  }
}

@media April {
  .c0 {
    marquee: December;
  }
}

@media January {
  .c0 {
    marquee: April;
  }
}

@media April {
  .c0 {
    marquee: May;
  }
}

@media June {
  .c0 {
    marquee: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee: January;
  }
}

@media April {
  .c0 {
    marquee: December;
  }
}

@media January {
  .c0 {
    marquee: April;
  }
}

@media April {
  .c0 {
    marquee: May;
  }
}

@media June {
  .c0 {
    marquee: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders postitive number 1`] = `
Array [
  .c0 {
  marquee: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders string 1`] = `
Array [
  .c0 {
  marquee: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: June;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marquee renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`marquee renders valid theme path 1`] = `
Array [
  .c0 {
  marquee: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
